--- a/public/styles/sass/sections/_company.scss
+++ b/public/styles/sass/sections/_company.scss
@@ -354,21 +354,3 @@
 svg {
   width: 100%;
 }
-
-.graph-padding::before {
-  height: 100%;
-  width: 10%;
-  right: 0;
-  content: "\00a0";
-  position: absolute;
-
-  background-image: -moz-linear-gradient(left, rgba(255,255,255,0), rgba(255,255,255,1));
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(255,255,255,0))), to(rgba(255,255,255,1));
-  background-image: -webkit-linear-gradient(left, rgba(255,255,255,0)), rgba(255,255,255,1);
-  background-image: -o-linear-gradient(left, rgba(255,255,255,0), rgba(255,255,255,1));
-  background-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1));
-  background-repeat: repeat-x;
-
-  pointer-events:none;
-
-}
